# setsuloc

./: Dockerfile  README.md  apt.txt  apt.txt.txt  credenciais.json  dockerfile  main.py  pyproject.toml  replit.nix  requirements.txt  shell.nix
