[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.38.0",
    "gspread>=6.2.0",
    "numpy>=2.2.4",
    "oauth2client>=4.1.3",
    "opencv-python>=4.11.0.86",
    "pytesseract==0.3.13",
    "requests>=2.32.3",
    "telegram>=0.0.1",
]
